# esp32_nat_router_extended

./: .gitignore  CMakeLists.txt  README.md  Untitled-2.sh  build.py  gen_esp32part.py  index.html  larger.csv  merge_bin_esp.py  onebin.py  platformio.ini  refresh_styles  sdkconfig  sdkconfig.esp32  sdkconfig.esp32-c3  sdkconfig.esp32-c3-devkitm-1  sdkconfig.esp32-c3.v5.1  sdkconfig.esp32-c6  sdkconfig.esp32-s2  sdkconfig.esp32-s2.v5.1  sdkconfig.esp32-s3  sdkconfig.esp32-s3-supermini  sdkconfig.esp32dev  sdkconfig.featheresp32-s2  set_sta mySSIDBR M0N2i1D2C  version
.github/: release-drafter.yaml  release-drafter.yml
.github/workflows/: release.yaml  shrinkHTML.py
boards/: esp32-s3-supermini.json
components/cmd_nvs/: cmd_nvs.c  cmd_nvs.h
components/cmd_router/: CMakeLists.txt  cmd_router.c  cmd_router.h  router_globals.h
components/cmd_system/: CMakeLists.txt  cmd_system.c  cmd_system.h
docs/: BUILD-with-Eclipse.md  BUILD.md  README.md  advanced.md  ota.md
html_uncompressed/: apply.html  config.css  config.html  lock.html  refresh.html  scan.html
main/: CMakeLists.txt  http_server.c  pages.h
main/pages/: config.html  scan.html  styles.css
src/: CMakeLists.txt  dnserver.c  esp32_nat_router.c  helper.c  helper.h  http_server.c  pages.h  scan.c  scan.h  timer.c  timer.h
src/pages/: about.html  advanced.html  apply.html  bootstrap.js  clients.html  config.html  jquery.js  lock.html  ota.html  otalog.html  portmap.html  portmap_end.html  portmap_start.html  reset.html  result.html  scan.html  styles-1.css  styles-578410c85e5e076cb33aeeff500eb68d.css  styles-67aa3b0203355627b525be2ea57be7bf.css  styles-9ee3c4491d35b3c1d830fa9da31c7861.css  styles.css  styles_normal.css  unlock.html
src/urihandler/: abouthandler.c  advancedhandler.c  applyhandler.c  clientshandler.c  handler.h  helper.c  helper.h  indexhandler.c  lockhandler.c  otahandler.c  portmaphandler.c  resthandler.c  resulthandler.c  scanhandler.c  statichandler.c
