FILE(GLOB_RECURSE app_sources ${CMAKE_SOURCE_DIR}/src/*.*)

idf_component_register(SRCS ${app_sources} INCLUDE_DIRS ".")

target_add_binary_data(${COMPONENT_TARGET} "pages/favicon.ico" BINARY)
target_add_binary_data(${COMPONENT_TARGET} "pages/styles-578410c85e5e076cb33aeeff500eb68d.css" TEXT)
target_add_binary_data(${COMPONENT_TARGET} "pages/config.html" TEXT)
target_add_binary_data(${COMPONENT_TARGET} "pages/result.html" TEXT)
target_add_binary_data(${COMPONENT_TARGET} "pages/apply.html" TEXT)
target_add_binary_data(${COMPONENT_TARGET} "pages/scan.html" TEXT)
target_add_binary_data(${COMPONENT_TARGET} "pages/reset.html" TEXT)
target_add_binary_data(${COMPONENT_TARGET} "pages/unlock.html" TEXT)
target_add_binary_data(${COMPONENT_TARGET} "pages/advanced.html" TEXT)
target_add_binary_data(${COMPONENT_TARGET} "pages/lock.html" TEXT)
target_add_binary_data(${COMPONENT_TARGET} "pages/clients.html" TEXT)
target_add_binary_data(${COMPONENT_TARGET} "pages/ota.html" TEXT)
target_add_binary_data(${COMPONENT_TARGET} "pages/otalog.html" TEXT)
target_add_binary_data(${COMPONENT_TARGET} "pages/jquery-8a1045d9cbf50b52a0805c111ba08e94.js" TEXT)
target_add_binary_data(${COMPONENT_TARGET} "pages/bootstrap-9d8e4911554dc484b35bfc04848f6dff.js" TEXT)